# true-bitrate

./: .gitignore  CMakeLists.txt  README.md
include/: gfx.hpp  spectrum.hpp
src/: main.cpp
